# ideeals

./: .gitignore  README.md  pyproject.toml
examples/: abstracts.ipynb  manuals.ipynb
ideeals/: __init__.py  _typing.py  metrics.py
ideeals/algebra/: _base.py  concrete.py
ideeals/models/: __init__.py
ideeals/models/abstract/: __init__.py
ideeals/models/abstract/layers/: _base.py
ideeals/models/abstract/losses/: __init__.py  _base.py  concrete.py
ideeals/models/abstract/networks/: network.py  trainer.py
ideeals/models/abstract/operators/: _base.py  concrete.py
ideeals/models/abstract/optimizers/: concrete.py
ideeals/models/manual/: _base.py  layered.py  linear.py  neighbors.py
ideeals/preprocessing/: selections.py
ideeals/preprocessing/transformers/: _base.py  concrete.py
scratches/models/manual/: linear.py  neighbors.py
