[project]
name = "ideeals"
version = "1.0.0"
description = "Pure NumPy implementations of classic ML and DL algorithms."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
    "scipy>=1.14.1",
]

[dependency-groups]
examples = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
]
dev = [
    "pyment>=0.3.3",
    "ruff>=0.8.4",
    "ty>=0.0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["ideeals"]
include = ["examples"]

[tool.ruff.lint]
ignore = ["F401", "F403"]

